new images added &modified index and css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,74 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/36d5c4f503.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./style.css" />
     <title>landing-page-2</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header class="header">
+        <div class="logo">
+          <img src="./assets/Logo.svg" alt="logo-img" />
+          <button>Hosterr is hiring</button>
+        </div>
+        <i class="fa-solid fa-bars"></i>
+      </header>
+      <main class="main">
+        <div class="hero-img">
+          <img src="./assets/Hero-Model.png" alt="Hero-img" class="hero" />
+          <img
+            src="./assets/Blue-Shape.svg"
+            alt="background-1"
+            class="absolute blue"
+          />
+          <img
+            src="./assets/Pink-Shape.svg"
+            alt="background-2"
+            class="absolute pink"
+          />
+          <img
+            src="./assets/Purple-Shape.svg"
+            alt="background-3"
+            class="absolute purple"
+          />
+        </div>
+        <div class="hero-text">
+          <h1>Host your website in less than 5 minutes</h1>
+          <p>
+            With Hosterr, Get your website up & running in no less than 5
+            minutes with the most cpmpetitive pricing packags available online.
+          </p>
+          <form>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Enter your e-mail address"
+            />
+            <input type="submit" value="Join Waitlist" id="submit-btn" />
+          </form>
+          <span>
+            <img src="./assets/Checkmark.svg" alt="ckeckmark" />
+            &nbsp;&nbsp;&nbsp;&nbsp;No spam ever, Unsubscribe anytime.
+          </span>
+        </div>
+      </main>
+      <footer class="footer">
+        <div class="social-icon">
+          <img src="./assets/social-facebook.svg" alt="fb-logo" />
+          <img src="./assets/twitter-x-seeklogo-3.svg" alt="twitter-logo" />
+
+          <img src="./assets/social-instagram.svg" alt="insta-logo" />
+        </div>
+        <div class="expert-doubt">
+          <img src="./assets/Help-Avatar.svg" alt="expert" />
+          <span> Have any question? <br /><b>Talk to specialist.</b> </span>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
