--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <header class="header">
         <div class="logo">
-          <img src="./assets/Logo.svg" alt="logo-img" />
+          <a href="#"><img src="./assets/Logo.svg" alt="logo-img" /></a>
           <button>Hosterr is hiring</button>
         </div>
         <i class="fa-solid fa-bars"></i>
@@ -62,8 +62,7 @@
       <footer class="footer">
         <div class="social-icon">
           <img src="./assets/social-facebook.svg" alt="fb-logo" />
-          <img src="./assets/twitter-x-seeklogo-3.svg" alt="twitter-logo" />
-
+          <img src="./assets/social-tweeter.svg" alt="twitter-logo" />
           <img src="./assets/social-instagram.svg" alt="insta-logo" />
         </div>
         <div class="expert-doubt">
