added responsive design for pc and tablet

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
           <a href="#"><img src="./assets/Logo.svg" alt="logo-img" /></a>
           <button>Hosterr is hiring</button>
         </div>
+        <div class="header-nav">
+          <ul>
+            <li><a href="#">Plans</a></li>
+            <li><a href="#">Find Domain</a></li>
+            <li><a href="#">Why us</a></li>
+          </ul>
+        </div>
+        <div class="header-btn">
+          <button class="btn">Sign In</button>
+          <button class="btn btn-blue">Join Waitlist</button>
+        </div>
         <i class="fa-solid fa-bars"></i>
       </header>
       <main class="main">
