--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
         <div class="header-nav">
           <ul>
-            <li><a href="#">Plans</a></li>
-            <li><a href="#">Find Domain</a></li>
-            <li><a href="#">Why us</a></li>
+            <li><a href="./index.html">Plans</a></li>
+            <li><a href="./index.html">Find Domain</a></li>
+            <li><a href="./index.html">Why us</a></li>
           </ul>
         </div>
         <div class="header-btn">
@@ -82,5 +82,6 @@
         </div>
       </footer>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
